# z-quantum-core

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  sample_setup.py  setup.py  setup_extras.py  version  wavefunction_benchmarking.py
cicd/: README.md  z-quantum-default.yaml  z-quantum-julia.yaml
docker/: Dockerfile
jax_experiments/: experiments.py  minimize_rx.py  qaoa_exp.py  qaoa_exp_lambdify.py  qaoa_exp_sympy2jax.py  qaoa_exp_sympy2jax_jit.py
publish-release/: action.yml
src/: setup.py
steps/: circuit.py  evaluation.py  graph.py  h2_one_body_tensor.npz  h2_two_body_tensor.npz  hydrogen_vqe_sdk.py  measure.py  operators.py  operators_test.py  optimize.py  optimize_test.py  transforms.py  utils.py
subtrees/z_quantum_actions/: Makefile  README.rst  pyproject.toml  pytest.ini  sample_setup.py  setup_extras.py
subtrees/z_quantum_actions/actions/coverage/: action.yml
subtrees/z_quantum_actions/actions/publish-release/: action.yml
subtrees/z_quantum_actions/actions/style/: action.yml
subtrees/z_quantum_actions/tests/: test_get_next_version.py
subtrees/z_quantum_actions/workflow-templates/: coverage.yml  publish-release.yml  style.yml  submit-dev-main-pr.yml
tasks/: circuit.py  circuit_tasks.py  graph.py  graph_tasks.py  measure_tasks.py  utils_tasks.py
templates/: circuit.yaml  evaluation.yaml  graph.yaml  measure.yaml  operators.yaml  optimize.yaml  proxy.yaml  transforms.yaml  utils.yaml
workflow-templates/: coverage.yml  (+2 more)
(+625 files in other folders)
